--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,3 +4,11 @@ repos:
     hooks:
       - id: black
         language_version: python3.11  # Remplacez par votre version de Python
+
+  - repo: local
+    hooks:
+      - id: run-tests
+        name: Run Unit Tests
+        entry: python manage.py test
+        language: system
+        pass_filenames: false
